--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://orpcy.github.io/portfolio-new/",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "express": "^4.17.1",
     "jquery": "^3.4.1",
     "lightbox2": "^2.11.0",
     "node-sass": "^4.12.0",
